--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-    
      <div class="title">
        <h1>Lone Starfish</h1>
      </div>    
+     <a href="#">HOME</a>
     <header>
         <img id="firstphoto" src="images/lone-starfish.jpg" alt="starfish photo" />
     </header>
