--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
      <div class="title">
        <h1>Lone Starfish</h1>
-     </div>    
-     <a href="#">HOME</a>
+     </div>
+     <nav>
+         <ul class="menu" >
+             <a class="home" href="#">HOME</a> 
+             <a class="middle" href="#">STORY</a> 
+             <a class="contact" href="#">CONTACT</a> 
+         </ul>
+     </nav>
     <header>
         <img id="firstphoto" src="images/lone-starfish.jpg" alt="starfish photo" />
     </header>
