adds prop spacing to form and buttons

--- a/index.html
+++ b/index.html
@@ -34,23 +34,22 @@
             <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
         </ul>
     </div>
+    <h4>Contact to learn more</h4>
     <section id="forms">
-        <h2>Forms</h2>
-        <form action="http://google.com" method="get">
             <div>
                 <label for="Your Name">Your Name</label>
                 <br>
-                <input id="name" type="text">
+                <input id="name" type="text" size="140">
             </div>
             <div>
                 <label for="Email">Your Email</label>
                 <br>
-                <input id="mail" name="mail"></input>
+                <input id="mail" name="mail" size="140"></input>
             </div>
             <div>
                 <label for="message">Your Message</label>
                 <br>
-                <textarea id="message" name="message"></textarea>
+                <textarea id="message" name="message" cols="129"></textarea>
             </div>
             <div>
                 <p>Would you like to visit the starfish?</p>
@@ -64,7 +63,7 @@
                 <input type="radio" id="maybe" name="visit" value="maybe">
             </div>
             <div>
-                <input type="submit" value="send" >
+                <input class="button" type="submit" value="SEND" >
             </div>
         </form> 
       </section>
