--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Put it all into a container to try and fix the screen size issue in css -->
     <div class="container">
      <div class="title">
        <h1>Lone Starfish</h1>
      </div>
+
+     <!-- giving a class of menu for easier edits same for the a href -->
      <nav>
          <ul class="menu" >
              <li><a class="home" href="#">HOME</a></li> 
@@ -19,13 +22,17 @@
              <li><a class="contact" href="#">CONTACT</a></li> 
          </ul>
      </nav>
+
+     <!-- using the img tag because the assignment said too -->
     <header>
         <img id="firstphoto" src="images/lone-starfish.jpg" alt="startfish">
-        
     </header>
+
          <h2 class="header"> Life of a Starfish</h2>
     <article> Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
     </article>
+
+<!-- giving the facts a class for easier adjustments  -->
     <div>
         <h3>Facts About Starfish</h3>
         <ul class="facts">
@@ -35,6 +42,8 @@
             <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
         </ul>
     </div>
+
+    <!-- keeping it all in a section so it is organized and easier to adjust -->
     <h4>Contact to learn more</h4>
     <section id="forms">
             <div>
@@ -67,6 +76,7 @@
                 <input class="button" type="submit" value="SEND" >
             </div> 
       </section>
+
       <footer>
         <p>© Lone Starfish</p>
       </footer>
